update community
